--- a/index.html
+++ b/index.html
@@ -2,64 +2,123 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Pizza Italia</title>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <script src="js/jquery-3.3.1.js" charset="utf-8"></script>
-    <script src="js/scripts.js" charset="utf-8"></script>
-    <title>Portland Pizza</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script type="text/javascript" src= "js/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src= "js/scripts.js"></script>
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron">
-        <h2>Welcome to Portland's Pizzeria</h2>
+      <div class="jumbotron jum">
+        <h1>Welcome to Pizza Italia!</h1>
       </div>
-
-      <!-- form one -->
-      <form id="pizzaSurvey">
-        <div class="form-group">
-          <p>Please order your pizza toppings that you would like:</p>
-          <h4>Meat types:</h4>
-          <input type="checkbox" name="meatType" value="#">Pepperoni<br>
-          <input type="checkbox" name="meatType" value="#">Ham<br>
-          <input type="checkbox" name="meatType" value="#">Bacon<br>
-          <input type="checkbox" name="meatType" value="#">Chicken<br>
-          <input type="checkbox" name="meatType" value="#">grilled salmon<br>
-        </div>
-        <!-- end of form one -->
-
-        <!-- form two -->
-          <div class="form-group">
-            <h4>Vegetable Types</h4>
-            <p>Select the vegetables you want on your pizza:</p>
-            <input type="checkbox" name="vegetableType" value="#">Onions<br>
-            <input type="checkbox" name="vegetableType" value="#">Peppers<br>
-            <input type="checkbox" name="vegetableType" value="#">Zuchinni<br>
-            <input type="checkbox" name="vegetableType" value="#">Grilled Cucumbers<br>
-            <input type="checkbox" name="vegetableType" value="#">Tomatoes<br>
-          </div>
-          <!-- end of form two -->
-
-          <!-- form three -->
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Let's start what size of pizza you want?</h2>
             <div class="form-group">
-              <h4>Cheese Types</h4>
-              <p>Select the cheese you want on your pizza:</p>
-              <input type="checkbox" name="cheeseType" value="bike">Mozarella<br>
-              <input type="checkbox" name="cheeseType" value="car">Pepper Jack<br>
-              <input type="checkbox" name="cheeseType" value="carpool">Provolone<br>
-              <input type="checkbox" name="cheeseType" value="walk">Feta<br>
-              <input type="checkbox" name="cheeseType" value="bus">Harvati<br>
+          <label for="size">Size: </label>
+          <select class="size" name="size">
+            <option value="small">Small($6)</option>
+            <option value="medium">Medium($8)</option>
+            <option value="large">Large($10)</option>
+            <option value="x-large">Grande(X-Large($12))</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <h4>Let's pick your crust:</h4>
+          <div class="radio">
+            <label for="crust-type"><input type="radio" name="crust" value="thin">Thin Crust($0.10)</label>
+          </div>
+          <div class="radio">
+            <label for="crust-type"><input type="radio" name="crust" value="regular">Regular Crust($0.00)</label>
+          </div>
+          <div class="radio">
+            <label for="crust-type"><input type="radio" name="crust" value="thick">Thick Crust($0.10)</label>
+          </div>
+          <div class="radio">
+            <label for="crust-type"><input type="radio" name="crust" value="greek">Greek Crust-Thick Crust with aoli and pesto ($0.15)</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="form-group">
+              <h3>Toppings</h3>
+              <h4>Let's choose your toppings:</h4>
+              <h4>Meat Options:</h4>
+              <input type="checkbox" id="meat1" name="meat" value="chicken">
+              <label for="meat1">Chicken($2)</label><br>
+              <input type="checkbox" id="meat2" name="meat" value="bacon">
+              <label for="meat2">Bacon($2)</label><br>
+              <input type="checkbox" id="meat3" name="meat" value="pepperoni">
+              <label for="meat3">Pepperoni($2)</label><br>
+              <input type="checkbox" id="meat4" name="meat" value="salmon">
+              <label for="meat4">Salmon($3.50)</label><br>
+              <input type="checkbox" id="meat5" name="meat" value="steak">
+              <label for="meat5">Steak($4)</label><br>
             </div>
-            <!-- end of form three -->
-       <button type="submit">Submit Selection</button>
-      </form>
-      <span id="answerBox">
-        <p>Thank you for ordering!</p>
-        <p>Your results are:
-          <b>
-            <span id="answer"></span>
-          </b>
-        </p>
-      </span>
+            <div class="col-md-4">
+            <div class="form-group">
+              <h4>Cheese Options:</h4>
+              <input type="checkbox" id="cheese1" name="cheese" value="mozarella-cheese">
+              <label for="cheese">Mozzarella($1.50)</label><br>
+              <input type="checkbox" id="cheese2" name="cheese" value="harvati-cheese">
+              <label for="cheese">Harvati($1.50)</label><br>
+              <input type="checkbox" id="cheese3" name="cheese" value="provolone-cheese">
+              <label for="cheese">Provolone($1.50)</label><br>
+              <input type="checkbox" id="cheese4" name="cheese" value="american-cheese">
+              <label for="cheese">American($1)</label><br>
+              <input type="checkbox" id="cheese5" name="cheese" value="pepperJack-cheese">
+              <label for="cheese">Pepper Jack($1)</label><br>
+            </div>
+            <div class="col-md-4">
+            <div class="form-group">
+              <h4>Veggie Options:</h4>
+              <input type="checkbox" id="veggie1" name="veggie" value="tomatoes">
+              <label for="veggie">Tomatoes($0.50)</label><br>
+              <input type="checkbox" id="veggie2" name="veggie" value="bell peppers">
+              <label for="veggie">Bell Peppers($0.50)</label><br>
+              <input type="checkbox" id="veggie3" name="veggie" value="onions">
+              <label for="veggie">Onions($0.50)</label><br>
+              <input type="checkbox" id="veggie4" name="veggie" value="black olives">
+              <label for="veggie">Black Olives($0.50)</label><br>
+              <input type="checkbox" id="veggie5" name="veggie" value="broccoli">
+              <label for="veggie">Broccoli($0.50)</label><br>
+            </div>
+            <div class="col-md-4">
+            <div class="form-group">
+              <h4>Fruit Options:</h4>
+              <input type="checkbox" id="fruit1" name="fruit" value="pineapple">
+              <label for="fruit">Pineapple($0.50)</label><br>
+            </div>
+            <div class="col-md-4">
+            <div class="form-group">
+              <h4>Sauce Options:</h4>
+              <input type="checkbox" id="sauce1" name="sauce" value="tomato-sauce">
+              <label for="sauce">Tomato Sauce($0.10)</label><br>
+              <input type="checkbox" id="sauce2" name="sauce" value="alfredo-sauce">
+              <label for="sauce">Alfredo Sauce($0.10)</label><br>
+            </div>
+            <div class="input-group name-submit">
+          <span class="input-group-btn">
+            <button class="btn btn-warning" type="submit">Submit your order</button>
+          </span>
+        </div>
+        <div class="placed-orders">
+                <h4><span class="order-name"></span>Confirmation</h4>
+                <p>Your order has been received!You ordered the following total:<span class="order-size"></span> <span class="total-toppings"></span>
+                <ul class="toppings">
+                </ul>
+                <h4> Total: $<span class="order-cost"></span> </h4>
+              </div>
+
+
+
+
+
+
     </div>
+      </div>
+        </div>
   </body>
 </html>
