--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <div class="form-group">
           <h4>Let's pick your crust:</h4>
           <div class="radio">
-            <label for="crust"><input type="radio" name="crust" value="thin">Thin Crust($0.10)</label>
+            <label for="crust"><input type="radio" id = "crust" name="crust" value="thin">Thin Crust($0.10)</label>
           </div>
           <div class="radio">
-            <label for="crust"><input type="radio" name="crust" value="regular">Regular Crust($0.10)</label>
+            <label for="crust"><input type="radio" id = "crust" name="crust" value="regular">Regular Crust($0.10)</label>
           </div>
           <div class="radio">
-            <label for="crust"><input type="radio" name="crust" value="thick">Thick Crust($0.10)</label>
+            <label for="crust"><input type="radio" id = "crust" name="crust" value="thick">Thick Crust($0.10)</label>
           </div>
           <div class="radio">
-            <label for="crust"><input type="radio" name="crust" value="greek">Greek Crust-Thick Crust with aoli and pesto ($0.15)</label>
+            <label for="crust"><input type="radio" id = "crust" name="crust" value="greek">Greek Crust-Thick Crust with aoli and pesto ($0.15)</label>
           </div>
         </div>
         <div class="row">
@@ -46,57 +46,57 @@
               <h3>Toppings</h3>
               <h4>Let's choose your toppings:</h4>
               <h4>Meat Options:</h4>
-              <input type="checkbox" id="meat1" name="meat" value="chicken">
+              <input type="checkbox" id="meat" name="meat" value="chicken">
               <label for="meat1">Chicken($2)</label><br>
-              <input type="checkbox" id="meat2" name="meat" value="bacon">
+              <input type="checkbox" id="meat" name="meat" value="bacon">
               <label for="meat2">Bacon($2)</label><br>
-              <input type="checkbox" id="meat3" name="meat" value="pepperoni">
+              <input type="checkbox" id="meat" name="meat" value="pepperoni">
               <label for="meat3">Pepperoni($2)</label><br>
-              <input type="checkbox" id="meat4" name="meat" value="salmon">
+              <input type="checkbox" id="meat" name="meat" value="salmon">
               <label for="meat4">Salmon($2)</label><br>
-              <input type="checkbox" id="meat5" name="meat" value="steak">
+              <input type="checkbox" id="meat" name="meat" value="steak">
               <label for="meat5">Steak($2)</label><br>
             </div>
             <div class="col-md-4">
             <div class="form-group">
               <h4>Cheese Options:</h4>
-              <input type="checkbox" id="cheese1" name="cheese" value="mozarella-cheese">
+              <input type="checkbox" id="cheese" name="cheese" value="mozarella-cheese">
               <label for="cheese">Mozzarella($1.50)</label><br>
-              <input type="checkbox" id="cheese2" name="cheese" value="harvati-cheese">
+              <input type="checkbox" id="cheese" name="cheese" value="harvati-cheese">
               <label for="cheese">Harvati($1.50)</label><br>
-              <input type="checkbox" id="cheese3" name="cheese" value="provolone-cheese">
+              <input type="checkbox" id="cheese" name="cheese" value="provolone-cheese">
               <label for="cheese">Provolone($1.50)</label><br>
-              <input type="checkbox" id="cheese4" name="cheese" value="american-cheese">
+              <input type="checkbox" id="cheese" name="cheese" value="american-cheese">
               <label for="cheese">American($1.50)</label><br>
-              <input type="checkbox" id="cheese5" name="cheese" value="pepperJack-cheese">
+              <input type="checkbox" id="cheese" name="cheese" value="pepperJack-cheese">
               <label for="cheese">Pepper Jack($1.50)</label><br>
             </div>
             <div class="col-md-4">
             <div class="form-group">
               <h4>Veggie Options:</h4>
-              <input type="checkbox" id="veggie1" name="veggie" value="tomatoes">
+              <input type="checkbox" id="veggie" name="veggie" value="tomatoes">
               <label for="veggie">Tomatoes($0.50)</label><br>
-              <input type="checkbox" id="veggie2" name="veggie" value="bell peppers">
+              <input type="checkbox" id="veggie" name="veggie" value="bell peppers">
               <label for="veggie">Bell Peppers($0.50)</label><br>
-              <input type="checkbox" id="veggie3" name="veggie" value="onions">
+              <input type="checkbox" id="veggie" name="veggie" value="onions">
               <label for="veggie">Onions($0.50)</label><br>
-              <input type="checkbox" id="veggie4" name="veggie" value="black olives">
+              <input type="checkbox" id="veggie" name="veggie" value="black olives">
               <label for="veggie">Black Olives($0.50)</label><br>
-              <input type="checkbox" id="veggie5" name="veggie" value="broccoli">
+              <input type="checkbox" id="veggie" name="veggie" value="broccoli">
               <label for="veggie">Broccoli($0.50)</label><br>
             </div>
             <div class="col-md-4">
             <div class="form-group">
               <h4>Fruit Options:</h4>
-              <input type="checkbox" id="fruit1" name="fruit" value="pineapple">
+              <input type="checkbox" id="fruit" name="fruit" value="pineapple">
               <label for="fruit">Pineapple($0.50)</label><br>
             </div>
             <div class="col-md-4">
             <div class="form-group">
               <h4>Sauce Options:</h4>
-              <input type="checkbox" id="sauce1" name="sauce" value="tomato-sauce">
+              <input type="checkbox" id="sauce" name="sauce" value="tomato-sauce">
               <label for="sauce">Tomato Sauce($0.10)</label><br>
-              <input type="checkbox" id="sauce2" name="sauce" value="alfredo-sauce">
+              <input type="checkbox" id="sauce" name="sauce" value="alfredo-sauce">
               <label for="sauce">Alfredo Sauce($0.10)</label><br>
             </div>
             <div class="input-group name-submit">
@@ -104,7 +104,7 @@
             <button class="btn btn-warning" type="submit">Submit your order</button>
           </span>
         </div>
-        <div class="placed-orders">
+        <div id="placed-orders">
                 <h4><span class="order-name"></span>Confirmation</h4>
                 <p>Your order has been received!You ordered the following total:<span class="order-size"></span> <span class="total-toppings"></span>
                 <ul class="toppings">
